// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prw: Token hello1.prw 1`] = `
hello1.prw
line 0 (column 0): 
-------------------^
Can't start parsing from rule "start_token".

`;

exports[`prw: Token hello2.prw 1`] = `
hello2.prw
line 0 (column 0): 
-------------------^
Can't start parsing from rule "start_token".

`;
